// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-content="d4dc5a51"
          fill="none"
          height="18"
          viewBox="0 0 116 18"
          width="116"
        />
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      data-slot="sidebar.stage-mode"
      style="display: contents;"
    />
    <ul
      aria-label="Primary actions"
      class="primaryList"
    >
      <li
        class="primaryListItem"
      >
        <button
          aria-label="New session"
          class="row newSession"
          type="button"
        >
          <svg
            data-content="c0ce4dcc"
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="primaryLabel wide"
          >
            New Session
          </span>
        </button>
      </li>
      <div
        data-slot="sidebar.primary.action"
        style="display: contents;"
      />
      <li
        class="primaryListItem"
      >
        <button
          aria-label="Scheduled tasks (coming soon)"
          class="row scheduledTasksPlaceholder"
          disabled=""
          type="button"
        >
          <svg
            data-content="5ec07d89"
            data-deepcreator-icon="timer"
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="primaryLabel wide"
          >
            Scheduled Tasks
          </span>
        </button>
      </li>
    </ul>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新建会话"
        class="brand wide"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-content="d4dc5a51"
          fill="none"
          height="18"
          viewBox="0 0 116 18"
          width="116"
        />
      </button>
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      data-slot="sidebar.stage-mode"
      style="display: contents;"
    />
    <ul
      aria-label="主要操作"
      class="primaryList"
    >
      <li
        class="primaryListItem"
      >
        <button
          aria-label="新建会话"
          class="row newSession"
          type="button"
        >
          <svg
            data-content="c0ce4dcc"
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="primaryLabel wide"
          >
            新会话
          </span>
        </button>
      </li>
      <div
        data-slot="sidebar.primary.action"
        style="display: contents;"
      />
      <li
        class="primaryListItem"
      >
        <button
          aria-label="定时任务（即将推出）"
          class="row scheduledTasksPlaceholder"
          disabled=""
          type="button"
        >
          <svg
            data-content="5ec07d89"
            data-deepcreator-icon="timer"
            fill="none"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="primaryLabel wide"
          >
            定时任务
          </span>
        </button>
      </li>
    </ul>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
